NetBSD Problem Report #50666

From www@NetBSD.org  Sun Jan 17 09:13:42 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 95D3B7ABE4
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 17 Jan 2016 09:13:42 +0000 (UTC)
Message-Id: <20160117091341.B17D97ACBC@mollari.NetBSD.org>
Date: Sun, 17 Jan 2016 09:13:41 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/lpr/pac/pac.c:287]: (error) Memory leak: base
X-Send-Pr-Version: www-1.0

>Number:         50666
>Category:       bin
>Synopsis:       src/usr.sbin/lpr/pac/pac.c:287]: (error) Memory leak: base
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 17 09:15:00 +0000 2016
>Closed-Date:    Mon Feb 15 11:55:37 +0000 2016
>Last-Modified:  Mon Feb 15 11:55:37 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160116
>Organization:
>Environment:
>Description:
   base = (struct hent **) calloc(sizeof hp, hcount);

   // ...

   qsort(base, hcount, sizeof hp, qucmp);

No mention of any free.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50666 CVS commit: src/usr.sbin/lpr/pac
Date: Sun, 17 Jan 2016 09:50:31 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Jan 17 14:50:31 UTC 2016

 Modified Files:
 	src/usr.sbin/lpr/pac: pac.c

 Log Message:
 PR/50666: David Binderman:
 He's out of jail and out of bail and that's the way it goes:
     free(base);


 To generate a diff of this commit:
 cvs rdiff -u -r1.23 -r1.24 src/usr.sbin/lpr/pac/pac.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 15 Feb 2016 11:55:37 +0000
State-Changed-Why:
fixed by christos


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.